[package]
name = "spimpl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrlp = { version = "0.2.2", features = ["std", "derive"] }
secp256k1 = { version = "0.24.2", features = ["global-context"] }
sha3 = "0.10.6"
bytes = { version = "1.3.0", features = ["std"] }
thiserror = "1.0.37"
hex = "0.4.3"
rand = "0.8.5"
aes = "0.8.2" # aesctr
ctr = "0.9.2"
cipher = "0.4.3"
aes-gcm = "0.10.1"
hkdf = "0.12.3"
k256 = "0.11.6"  # Hkdf::<Sha256>
sha2 = "0.10.6"
base64 = "0.20.0"

[dev-dependencies]
hex-literal = "0.3.4"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
enr = { version = "0.7.0", features = ["k256", "rust-secp256k1"] }
rlp = "0.5.2"
