[package]
name = "discv5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlp = { path = "../rlp" }
enr = { path = "../enr" }
ethnum = "1.3.2"

[dev-dependencies]
hex = "0.4.3"
hex-literal = "0.4.1"
