[package]
name = "discv5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlp = { path = "../rlp" }
enr = { path = "../enr" }
extensions = { path = "../extensions" }
ethnum = "1.3.2"
rand = "0.8.5"
ctr = "0.9.2"
aes = "0.8.3"
aes-gcm = "0.10.2"
sha2 = "0.10.7"
thiserror = "1.0.40"

[dev-dependencies]
hex = "0.4.3"
hex-literal = "0.4.1"
sigp_discv5 = { version = "0.2.2", package = "discv5" }
criterion = "0.5.1"

[[bench]]
name = "unpack_packet"
harness = false
