[package]
name = "discv5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlp = { path = "../rlp" }
enr = { path = "../enr" }
extensions = { path = "../extensions" }
ethnum = "1.5.0"
rand = "0.8.5"
ctr = "0.9.2"
aes = "0.8.3"
aes-gcm = "0.10.3"
sha2 = "0.10.8"
thiserror = "1.0.50"

[dev-dependencies]
hex = "0.4.3"
hex-literal = "0.4.1"
sigp_discv5 = { version = "0.3.1", package = "discv5" }
criterion = "0.5.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
test_extensions = { path = "../test_extensions" }

[[bench]]
name = "unpack_packet"
harness = false
