[package]
name = "enr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.1"
k256 = { version = "0.13.1", features = ["ecdsa"], optional = true }
rand = "0.8.5"
rlp = { path = "../rlp" }
secp256k1 = { version = "0.27.0", features = ["global-context"] }
sha3 = "0.10.8"
thiserror = "1.0.40"

[dev-dependencies]
hex = "0.4.3"
hex-literal = "0.4.1"
serde_json = "1.0.96"
rlp_types = { path = "../rlp_types" }
sigp_enr = { version = "0.8.1", package = "enr" }
criterion = "0.4.0"

[[bench]]
name = "record_from_address"
harness = false

