[package]
name = "rlp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extensions = { path = "../extensions" }
rlp_derive = { path = "../rlp_derive" }
thiserror = "1.0.37"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
parity_rlp = { version = "0.5.2", package = "rlp" }
hex-literal = "0.3.4"
serde_json = "1.0.79"
hex = "0.4.3"
rlp_types = { path = "../rlp_types" }
num-bigint = "0.4.3"
