[package]
name = "rlp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethnum = "1.3.2"
extensions = { path = "../extensions" }
rlp_derive = { path = "../rlp_derive" }
thiserror = "1.0.40"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
parity_rlp = { version = "0.5.2", package = "rlp" }
hex-literal = "0.4.1"
serde_json = "1.0.99"
hex = "0.4.3"
rlp_types = { path = "../rlp_types" }
num-bigint = "0.4.3"
criterion = "0.5.1"

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "decode"
harness = false
