[package]
name = "rlp_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.108"
hex = "0.4.3"
rlp = { path = "../rlp" }
extensions = { path = "../extensions" }
num-bigint = "0.4.4"
num-traits = "0.2.17"

[dev-dependencies]
hex-literal = "0.4.1"
